fix(cors): 403 cozumu - coklu origin ve APP_CORS_ORIGINS=* destegi, yorum eklendi
Co-authored-by: Cursor <cursoragent@cursor.com>